@@ -8,7 +8,9 @@
 - Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
 - CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen dituzten arazoak konpondu dira. (#55)
 - Ereduzko prosa gaur proiektuko corpusa eta Klasikoen gordailua gehitu zaizkio barrari. (#54)
+- Bilaketa konbinatuetan Hiztegi Batuaren azpisarrerak kontsulta daitezke. (#40) 
 - Hiztegien menua erakutsi/ezkutatzeko hobespena hobespenen leihoan integratu da. (#49)
+- Euskalterm-en bilaketak egitean, hitz baten hasiera kontsultatzen bada, hitz amaieran "*" komodina idatzi balitz bezala funtzionatzen du. (#60)
 
 
 3.0 bertsioa
